fix overlapping issue with advanced port search dropdown

--- a/Netdisco/share/views/plugin/portinfo/portinfo.css
+++ b/Netdisco/share/views/plugin/portinfo/portinfo.css
@@ -96,6 +96,7 @@
   padding: 5px;
   border-radius: 5px;
   background-color: rgba(50, 50, 150, 0.7);
+  z-index: 1000;
 }
 
 .nd_location-port-search-additional::before {
